clenaed up light propigator